fixed variable name